# cinemaps

./: README.md  pyproject.toml
cinemaps/: main.py  validacao.py
cinemaps/service/: cinema.py  filme.py  sessao.py  usuario.py
cinemaps/util/: db.py  sql.py
reserva_app/: main.py
templates/: cadastro.html  cinema.html  cinemas.html  formulario_db.html  index.html  layout.html  login.html
