[tool.poetry]
name = "reserva-app"
version = "0.1.0"
description = ""
authors = ["Domingos Lucas <domingos.latorre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
mysql-connector = "^2.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
