[tool.poetry]
name = "cinemaps"
version = "0.1.0"
description = ""
authors = ["Fernando Freitas de Lira <freitax.li@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
mysql-connector = "^2.2.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
