[tool.poetry]
name = "cinemaps"
version = "0.1.0"
description = ""
authors = ["Fernando Freitas de Lira <freitax.li@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
requests = "^2.32.3"
mysql-connector-python = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
